added update function
